2000-05-14  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/ConsoleEvent.java: Removed
	class as it is no longer needed after changes to Shell.
	* src/jacl/tcl/lang/Shell.java: Overhauled the
	way the Shell program interacts with the Interp.
	The old way was not thread safe. The prompt displayed
	when a command is not yet complete has also been
	changed to match recent verisons of Tcl.

2000-05-13  Mo DeJong  <mdejong@redhat.com>

	* src/pkgIndex.tcl: Added missing
	namespace export of the java::import cmd.

2000-05-13  Mo DeJong  <mdejong@redhat.com>

	* src/native/javaCmd.c:
	* src/native/javaObj.c:
	* src/native/javaUtil.c:
	* src/native/tclResult.c:
	* unix/Makefile.in:
	* unix/configure.in:
	Removed old compat code that supported
	building Tcl Blend with Tcl 8.0.
	We now require Tcl 8.3.1 as a minimum.

2000-05-13  Mo DeJong  <mdejong@redhat.com>

	* unix/Makefile.in: Changed var named
	TCL_INSTALL_BIN_DIR to TCL_INSTALL_LIB_DIR.
	Added "make gdb" rule for Tcl Blend debugging.
	* unix/configure.in: Added search on PATH for
	gdb. Changed var named TCL_INSTALL_BIN_DIR to
	TCL_INSTALL_LIB_DIR.

2000-05-13  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/Notifier.java:
	Fixed small typo in a comment.

2000-05-13  Mo DeJong  <mdejong@redhat.com>

	* src/jacl/tcl/lang/Shell.java:
	Dropped use of Jacl Channel objects in
	favor of directly calling System.in and
	System.out.

2000-04-07  Mo DeJong  <mdejong@redhat.com>

	* README.jacl:
	* README.tclblend: Fixed up README files
	for the 1.3 version.
	* src/pkgIndex.tcl: Major overhaul of
	the tclblend package loading process, we
	now make use of the XpUtils package.
	* src/jacl/tcl/lang/Interp.java: Updated
	Java package version to 1.3.0.
	* src/tclblend/tcl/lang/Interp.java: Moved
	name of tclblend shared lib into a variable.
	* src/tcljava/tcl/lang/BlendExtension.java:
	Updated Java package version to 1.3.0.
	* src/tcljava/tcl/lang/TclInteger.java:
	Added Tcl C function names to documentation.